Résultats avec BCemu

--- a/1 Test_MassFunction.ipynb
+++ b/1 Test_MassFunction.ipynb
@@ -1515,10 +1515,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Paramètres censés maximiser la variation de la fonction de masse\n",
     "Girimaxmax = {\n",
     "        \"log10Mc\": 15,\n",
     "        \"mu\": 0.93,\n",
