Début du fichier simus_soutenance

--- a/Cobaya/Avec_modifs/tests_modifs_cobaya.ipynb
+++ b/Cobaya/Avec_modifs/tests_modifs_cobaya.ipynb
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e3fb32b6",
    "metadata": {},
    "outputs": [
@@ -479,7 +479,7 @@
     "# Plot\n",
     "g.triangle_plot(\n",
     "    samples,\n",
-    "    [\"bar_log10Mc\",\"bar_mu\",\"bar_thej\",\"bar_gamma\",\"bar_delta\",\"bar_eta\",\"bar_deta\"],   # Paramètres à afficher\n",
+    "    [\"omegam\", \"sigma8\", \"omch2\",\"ombh2\",\"ns\",\"logA\",\"H0\", \"pp_beta\"],   # Paramètres à afficher\n",
     "    filled=[True],\n",
     "    legend_labels=[\"baryons\"],  # 1 label par sample\n",
     "    legend_loc=\"upper right\",   # Position de la légende\n",
